--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     {% if current_user.is_authenticated %}
-                        {% if current_user.role == 'admin' %}
+                        {% if current_user.is_admin() %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('main.admin_dashboard') }}">Dashboard</a>
                         </li>
@@ -37,6 +37,20 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('service_requests.list_requests') }}">Service Requests</a>
                         </li>
+                        {% if current_user.is_admin() %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="amcDropdown" role="button" data-bs-toggle="dropdown">
+                                AMC Management
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="{{ url_for('amc.list_contracts') }}">Contracts</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('amc.list_equipment') }}">Equipment</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="{{ url_for('amc.new_contract') }}">New Contract</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('amc.new_equipment') }}">New Equipment</a></li>
+                            </ul>
+                        </li>
+                        {% endif %}
                         {% if current_user.role == 'college_admin' %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('service_requests.create_request') }}">New Request</a>
